# GPUMemManSurvey

frameworks/cuda/: BasicInstance.cuh
frameworks/dev_segfit/: BasicInstance.cuh  CMakeLists.txt  Instance.cuh  Instance.h  data_processing.ipynb  main.cu  runtest.sh
